2020-06-06  Mark Wielaard  <mark@klomp.org>

	* testfilesyms32.bz2: New test file.
	* testfilesyms64.bz2: Likewise.
	* run-nm-syms.sh: New test.
	* Makefile.am (TESTS): Add run-nm-syms.sh.
	(EXTRA_DIST): run-nm-syms.sh, testfilesyms32.bz2 and
	testfilesyms64.bz2

2020-05-08  Mark Wielaard  <mark@klomp.org>

	* elfputzdata.c (main): Explicitly check orig_buf is not NULL
	before calling memcmp.

2020-05-05  Mark Wielaard  <mark@klomp.org>

	* testfile-lto-gcc8.bz2: New test file.
	* testfile-lto-gcc9.bz2: Likewise.
	* Makefile.am (EXTRA_DIST): Add testfile-lto-gcc8.bz2 and
	testfile-lto-gcc9.bz2.
	* run-allfcts.sh: Add testfile-lto-gcc9 and testfile-lto-gcc8
	tests.

2020-05-05  Mark Wielaard  <mark@klomp.org>

	* testfile-lto-gcc10.bz2: New test file.
	* Makefile.am (EXTRA_DIST): Add testfile-lto-gcc10.bz2.
	* run-allfcts.sh: Add testfile-lto-gcc10 test.

2020-04-17  Mark Wielaard  <mark@klomp.org>

	* test-subr.sh (testrun_on_self_obj): New function.
	* run-varlocs-self.sh: Run testrun_on_self_exe and
	testrun_on_self_lib with -e, run testrun_on_self_obj with
	--exprlocs -e.

2020-04-17  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (test-nlist$): New goal with minimal CFLAGS.
	(test_nlist_CFLAGS): New variable.

2020-03-28  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Test timestamps of archive-origin files.

2020-03-27  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Test /path/-based debuginfod-find.

2020-03-24  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Test relay of UA and XFF headers across
	federating debuginfods.

2020-03-26  Frank Ch. Eigler <fche@redhat.com>

	* run-debuginfod-find.sh: Look for debuginfod's new
	http_responses_* metrics.

2020-03-26  Frank Ch. Eigler <fche@redhat.com>

	* run-debuginfod-find.sh: Look for bsdtar instead of dpkg.

2020-03-26  Frank Ch. Eigler  <fche@redhat.com>

	* run-debuginfod-find.sh: Check for bsdtar zstd capability